<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtnum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="51dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/place1"
        android:inputType="number"
        android:textColor="#020101"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="42dp"
        android:fontFamily="sans-serif"
        android:text="@string/Titulo"
        android:textColor="#020101"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="sans-serif"
        android:text="@string/lnum1"
        android:textColor="#020101"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/txtnum1"
        app:layout_constraintStart_toStartOf="@+id/txtnum1" />

    <Button
        android:id="@+id/btncalcula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="sans-serif"
        android:text="@string/lbtcalcula"
        android:textColor="#020101"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/lblresult"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/txtnum2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="216dp"
        android:layout_marginBottom="215dp"
        android:fontFamily="sans-serif"
        android:text="@string/lnum2"
        android:textColor="#020101"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/btncalcula"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/txtnum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/place2"
        android:inputType="number"
        android:textColor="#020101"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:autofillHints="" />

    <TextView
        android:id="@+id/lblresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="90dp"
        android:shadowColor="#100F0F"
        android:text="@string/lresultado"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
